--- a/about/index.html
+++ b/about/index.html
@@ -198,7 +198,7 @@
                 post-container">
 
                 
-                <h1 id="this-is-about-page">This is About Page</h1>
+                <h1 id="this-is-about-me">This is about me</h1>
 
 
                 
