Updated about page

--- a/about/index.html
+++ b/about/index.html
@@ -198,7 +198,28 @@
                 post-container">
 
                 
-                <h1 id="this-is-about-me">This is about me</h1>
+                <p>Hey there! I&rsquo;m Sidath Munasinghe, and I&rsquo;m excited to welcome you to my personal blog. In this space, I want to give you a little glimpse into my tech journey, my passions, and what you can expect from this blog.</p>
+<h1 id="who-am-i">Who Am I?</h1>
+<p>I&rsquo;m a Technical Lead currently making waves at <a href="https://99x.io/">99x</a>, a company known for its innovation in the tech world. Before this, I had the privilege of working at <a href="https://syscolabs.lk/">Sysco Labs</a>, where I truly began to find my footing in the fast-paced tech industry.</p>
+<h1 id="the-experience">The Experience</h1>
+<p>With over 5 years of experience under my belt, I&rsquo;ve learned that adaptability and constant learning are key in this field. I thrive on challenges and consider myself a fast learner, always eager to explore the latest trends and technologies.</p>
+<h1 id="aws-mastery">AWS Mastery</h1>
+<p>One of my proudest achievements is becoming an AWS expert. Amazon Web Services has become an indispensable part of modern tech, and I&rsquo;ve had the pleasure of harnessing its power to create scalable, innovative solutions for various projects.</p>
+<h1 id="the-scholar-in-me">The Scholar in Me</h1>
+<p>My academic journey includes a BSc degree with first-class honors and an MSc in Data Science. These credentials not only represent my commitment to the field but also fuel my drive to stay at the forefront of tech advancements.</p>
+<h1 id="blogging-my-digital-playground">Blogging: My Digital Playground</h1>
+<p>I have a deep love for tech blogging. This blog is where I share my insights, experiences, and knowledge with you. Whether it&rsquo;s simplifying complex AWS concepts or offering tips on efficient coding, I&rsquo;m here to make tech more accessible and exciting for you. You can find more of my writings and insights on my <a href="https://medium.com/@sidathasiri">Medium</a> profile. Feel free to follow me there to stay updated on my latest articles.</p>
+<h1 id="building-the-aws-community">Building the AWS Community</h1>
+<p>Beyond blogging, I&rsquo;m an active member of the AWS community. I enjoy contributing to the growth and development of the AWS ecosystem, promoting collaboration and knowledge sharing among fellow enthusiasts.</p>
+<h1 id="research-publications">Research Publications</h1>
+<p>If you&rsquo;re interested in diving deeper into my research work, here are some of my publications:</p>
+<ul>
+<li><a href="https://www.springerprofessional.de/en/a-generalized-ensemble-machine-learning-approach-for-landslide-s/17204718">A Generalized Ensemble Machine Learning Approach for Landslide Susceptibility Mapping</a></li>
+<li><a href="https://ieeexplore.ieee.org/document/9906232">Exploring Innovative Solutions for Tech Challenges</a></li>
+</ul>
+<h1 id="whats-to-come">What&rsquo;s to Come</h1>
+<p>I invite you to join me on this journey as I continue to explore the ever-evolving world of technology. From my experiences at 99x to my musings on AWS and everything in between, I&rsquo;m here to share, learn, and grow with you.</p>
+<p>Thank you for stopping by my blog. Together, we&rsquo;ll embark on an exciting tech adventure, and I can&rsquo;t wait to connect with you all. Stay tuned for more blog posts, tutorials, and insights as we dive deeper into the world of tech.</p>
 
 
                 
