Removed unwanted images

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       alt="background"
     /><img
       class="d-md-none"
-      src="/images/gus_small.jpg"
+      src="/images/background_m.jpg"
       alt="background"
     />
   </div>
@@ -175,7 +175,7 @@
             <strong class="cd-headline clip">
               <span class="cd-words-wrapper">
                  
-                <b class="is-visible">Technical Lead</b>  <b>AWS Certified Solutions Architect</b>  <b>Technical Content Writer</b>  <b>Data Science Strategist: Holder of an MSc in Data Science</b>  <b>AWS Community Builder</b> 
+                <b class="is-visible">Technical Lead</b>  <b>AWS Certified Solutions Architect</b>  <b>Technical Content Writer</b>  <b>Master&#39;s degree in Data Science</b>  <b>AWS Community Builder</b> 
               </span>
             </strong>
           </div>
