--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           </div>
           
           <div class="clearfix">
-            <span class="skillbar-title">IaaC</span>
+            <span class="skillbar-title">IaC (CDK/Terraform/Serverless Framework/CloudFormation)</span>
             
             <div class="skillbar" data-percent="85%">
               <div class="skillbar-bar"></div>
@@ -400,7 +400,7 @@
   
   <div class="fun-fact-holder">
     <img class="img-fluid" src="/images/icons/write.png" alt="Tech Blogs" />
-    <p class="fact-counter count" data-count="20">0</p>
+    <p class="fact-counter count" data-count="21">0</p>
     <p>Tech Blogs</p>
   </div>
   
