--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           </div>
           
           <div class="clearfix">
-            <span class="skillbar-title">CI/CD</span>
+            <span class="skillbar-title">Software Architectural Design</span>
             
             <div class="skillbar" data-percent="85%">
               <div class="skillbar-bar"></div>
