--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
       content="Sidath Munasinghe is a dedicated Technical Lead passionate about enterprise software design and architecture, where he excel at creating efficient and scalable solutions. With a strong expertise in AWS (Amazon Web Services), he leverage its capabilities to drive innovation and deliver robust applications."
     />
     <meta name="author" content="Sidath Munasinghe" />
+    <link rel="icon" type="image/png" href="images/favicon.ico" />
     <title>404 - Page Not Found</title>
     <style>
       body {
