--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       alt="background"
     /><img
       class="d-md-none"
-      src="/images/background_m.jpg"
+      src="/images/background.jpg"
       alt="background"
     />
   </div>
