--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="/plugins/hugrid/hugrid.css" />
   
 
+  <link rel="canonical" href="https://sidathasiri.github.io/index.html" itemprop="url" />
 <!-- Main Stylesheet -->
 
   
