--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   
   
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCDEFG123"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCDEFG123"></script> -->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
