--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   
   
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCDEFG123"></script> -->
-    <script>
+    <!-- <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-ABCDEFG123');
-    </script>
+    </script> -->
   
 </head>
 <body> <!-- preloader start -->
