--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
   
   
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCDEFG123"></script> -->
-    <!-- <script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCDEFG123"></script>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-ABCDEFG123');
-    </script> -->
+    </script>
   
 </head>
 <body> <!-- preloader start -->
