update canonical link and remove index.html from sitemap

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     content="Sidath Munasinghe is a dedicated Technical Lead passionate about enterprise software design and architecture, where he excel at creating efficient and scalable solutions. With a strong expertise in AWS (Amazon Web Services), he leverage its capabilities to drive innovation and deliver robust applications."
   />
 
+  <link rel="canonical" href="https://sidathasiri.github.io/" />
+
   <meta
     name="keywords"
     content="Sidath Munasinghe, Sidath, Sidath Asiri"
