add canonical link to the /index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     content="Sidath Munasinghe, Sidath, Sidath Asiri"
   />
 
+  <link rel="canonical" href="https://sidathasiri.github.io/">
+
+
   
     <meta name="author" content="Sidath Munasinghe" />
   
