update title and background

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         class="col-lg-8 col-lg-offset-2 col-sm-8 col-sm-offset-2 head-container"
       >
         <div class="head-holder">
-          <h1 class="introduction">I&rsquo;m Sidath Munasinghe</h1>
+          <h1 class="introduction">Hello, I&rsquo;m Sidath Munasinghe</h1>
           <div class="animated-text">
             <strong class="cd-headline clip">
               <span class="cd-words-wrapper">
