update main titles and icon

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <strong class="cd-headline clip">
               <span class="cd-words-wrapper">
                  
-                <b class="is-visible">Senior Technical Lead</b>  <b>AWS Certified Solutions Architect</b>  <b>Technical Content Writer</b>  <b>BSc Engineering Honours</b>  <b>MSc in Data Science</b>  <b>AWS Community Builder</b> 
+                <b class="is-visible">Senior Technical Lead</b>  <b>AWS Certified</b> <b>Azure Certified</b> <b>Solutions Architect</b>  <b>Technical Content Writer</b>  <b>BSc Engineering Honours</b>  <b>MSc in Data Science</b>  <b>AWS Community Builder</b> 
               </span>
             </strong>
           </div>
@@ -429,9 +429,9 @@
 <div class="fun-facts container pt-5">
   
   <div class="fun-fact-holder">
-    <img class="img-fluid" src="/images/icons/aws_certified.png" alt="AWS Certifications" />
-    <p class="fact-counter count" data-count="1">0</p>
-    <p>AWS Certifications</p>
+    <img class="img-fluid" src="/images/icons/certified.png" alt="AWS Certifications" />
+    <p class="fact-counter count" data-count="3">0</p>
+    <p>Professional Certifications</p>
   </div>
   
   <div class="fun-fact-holder">
