add post on ai agents

--- a/index.html
+++ b/index.html
@@ -429,14 +429,14 @@
 <div class="fun-facts container pt-5">
   
   <div class="fun-fact-holder">
-    <img class="img-fluid" src="/images/icons/certified.png" alt="AWS Certifications" />
+    <img class="img-fluid" src="/images/icons/certified.png" alt="Professional Certifications" />
     <p class="fact-counter count" data-count="3">0</p>
     <p>Professional Certifications</p>
   </div>
   
   <div class="fun-fact-holder">
     <img class="img-fluid" src="/images/icons/write.png" alt="Tech Blogs" />
-    <p class="fact-counter count" data-count="25">0</p>
+    <p class="fact-counter count" data-count="26">0</p>
     <p>Tech Blogs</p>
   </div>
   
